Layout fixes & Unsplash integration (#4)
* Fixing mapbuttons and layout issues
Mapbuttons need to be absolute to fix the scroll issue

* More layout fixes

* Fixing state and layout issues

* Fixing image issues

* Fixup UTM

--- a/src/components/CountryDataBox/CountryDataBox.module.scss
+++ b/src/components/CountryDataBox/CountryDataBox.module.scss
@@ -27,6 +27,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   text-align: center;
+  margin-top: 4px;
 }
 
 .content {
@@ -41,11 +42,17 @@ hr {
 
 .cover {
   min-width: 300px;
-  min-height: 206px;
+  min-height: 209px;
 }
 
 .spinner {
-  top: 32px;
+  top: 42px;
+  position: relative;
+}
+
+.title-pop-count {
+  transform: scale(0.7);
+  top: 6px;
   position: relative;
 }
 
@@ -59,7 +66,6 @@ hr {
   margin: 0;
   padding: 0;
   display: block;
-  //border-radius: 0 0 16px 16px;
 }
 
 .credits-container {
