--- a/src/components/SidePanel/SidePanel.module.scss
+++ b/src/components/SidePanel/SidePanel.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   z-index: 1;
+  position: absolute;
 }
 
 .buttons {
